# CEN3031-project

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.user.BAK  HurrigatorsProject.pro  README.md  sonar-project.properties  vendor.yml
.github/workflows/: build.yml
forms/: mainwindow.ui  relieffundsdialog.ui
headers/: databridge.h  drawing.h  libosmhandler.h  mainwindow.h  maprenderer.h  relieffundsdialog.h  rendereropenglwidget.h
lib/OSMScout.framework/: OSMScout
lib/OSMScout.framework/Versions/A/: OSMScout
lib/OSMScout.framework/Versions/A/Headers/: CoreFeatures.h
lib/OSMScout.framework/Versions/A/Resources/: Info.plist
lib/OSMScoutClientQt.framework/: OSMScoutClientQt
lib/OSMScoutClientQt.framework/Versions/C/: OSMScoutClientQt
lib/OSMScoutClientQt.framework/Versions/C/Resources/: Info.plist
lib/OSMScoutMapQt.framework/: OSMScoutMapQt
lib/OSMScoutMapQt.framework/Versions/C/: OSMScoutMapQt
lib/OSMScoutMapQt.framework/Versions/C/Resources/: Info.plist
lib/nhc-crawler/: archive.html  fileoperations.py  kmzhtmlparser.py  main.py
source/: databridge.cpp  drawing.cpp  libosmhandler.cpp  main.cpp  mainwindow.cpp  maprenderer.cpp  relieffundsdialog.cpp  rendereropenglwidget.cpp
